To render avatar component correctly in table

--- a/client_angular/src/app/components/avatar-component/avatar-component.html
+++ b/client_angular/src/app/components/avatar-component/avatar-component.html
@@ -1,1 +1,10 @@
-<p>avatar-component works!</p>
+
+  <td>
+    <p style="background-color: rgb(41, 128, 185);">M</p>
+  </td>
+  <td>matei</td>
+  <td>mateiemail.com</td>
+  <td>
+    <button class="edit-btn" data-id="4">Edit</button>
+    <button class="delete-btn" data-id="4">Delete</button>
+  </td>
