--- a/client_angular/src/app/components/users-list-component/users-list-component.html
+++ b/client_angular/src/app/components/users-list-component/users-list-component.html
@@ -9,7 +9,7 @@
                     <th><button class="add-btn" id="add-btn">Add</button></th>
             </thead>
             <tbody> <!-- Примерен статичен ред -->
-                
+                <tr app-user-row></tr>
             </tbody>
             <tr id="add-user-row" class="add-user-row">
                     <td> <p></p></td>
