Render tha data

--- a/client_angular/src/app/components/avatar-component/avatar-component.html
+++ b/client_angular/src/app/components/avatar-component/avatar-component.html
@@ -2,8 +2,8 @@
   <td>
     <p style="background-color: rgb(41, 128, 185);">M</p>
   </td>
-  <td>matei</td>
-  <td>mateiemail.com</td>
+  <td>{{user?.name}}</td>
+  <td>{{user?.email}}</td>
   <td>
     <button class="edit-btn" data-id="4">Edit</button>
     <button class="delete-btn" data-id="4">Delete</button>
