add getter and load users

--- a/client_angular/src/app/components/avatar-component/avatar-component.html
+++ b/client_angular/src/app/components/avatar-component/avatar-component.html
@@ -1,6 +1,6 @@
 
   <td>
-    <p style="background-color: rgb(41, 128, 185);">M</p>
+    <p [style.background-color]="backGroundColor">{{initial}}</p>
   </td>
   <td>{{user?.name}}</td>
   <td>{{user?.email}}</td>
