--- a/client_angular/src/app/components/avatar-component/avatar-component.html
+++ b/client_angular/src/app/components/avatar-component/avatar-component.html
@@ -8,7 +8,7 @@
     <td>{{user?.email}}</td>
     <td>
       <button class="edit-btn" data-id="4" (click)="startEditing()">Edit</button>
-      <button class="delete-btn" data-id="4">Delete</button>
+      <button class="delete-btn" data-id="4" (click)="deleteUser()">Delete</button>
     </td>
   }@else {
 
